syntax = "proto3";

message Employer {
  optional string name = 1;
}

message Person {
  optional string first_name = 1;
  optional string last_name = 2;
  optional int32 year_of_birth = 3;
  optional Employer current_employer = 4;
  repeated Employer previous_employers = 5;
  map<string, Employer> employers_by_name = 6;
  map<string, string> tags = 7;
}
